Updated binding controller
