# pkg/controller/binding.go
@@ -1,8 +1,6 @@
 package controller
 
 import (
-	"log"
-
 	"github.com/appscode/kutil/tools/queue"
 	"github.com/golang/glog"
 	api "kube.ci/git-apiserver/apis/git/v1alpha1"
@@ -25,10 +23,16 @@ func (c *Controller) runBindingInjector(key string) error {
 	if !exist {
 		glog.Warningf("Binding %s does not exist anymore\n", key)
 	} else {
-		glog.Infof("Sync/Add/Update for Binding %s\n", key)
-
-		binding := obj.(*api.Binding)
-		log.Println(binding)
+		binding := obj.(*api.Binding).DeepCopy()
+		if binding.Status.LastObservedGeneration == nil || binding.Generation > *binding.Status.LastObservedGeneration {
+			glog.Infof("Sync/Add/Update for Binding %s\n", key)
+			// do tasks...
+			c.updateBindingLastObservedGen(binding.Name, binding.Namespace, binding.Generation) // TODO: errors
+		}
 	}
+	return nil
+}
+
+func (c *Controller) reconcileForBinding(binding *api.Binding) error {
 	return nil
 }
